# SkillZBox

./: .gitignore  .htaccess  App.js  README.md  index.php  package-lock.json  package.json  pas-de-nom.sql
.github/workflows/: codeql-analysis.yml
Database/: Model_PasDeNom.mwb  Model_SkillZBox.mwb  Model_SkillZBox.mwb.bak  database-initialization.sql  generate-database.sql
Documentation/: mkdocs.yml
Documentation/docs/: index.md
Documentation/docs/dev/: database.md  setupProject.md
Documentation/site/: index.html
Model/: DBconnect.php
api/: .htaccess  index.php
api/Controller/: CApiCategory.php  CApiRoom.php  CApiTag.php  CApiUser.php  CError404.php  MainController.php
api/Model/: ApiUser.php  DBconnect.php
api/Tools/: ErrorApi.php  Tools.php
api/View/: VApiCategory.php  VApiRoom.php  VApiTag.php  VApiUser.php  VError404.php
back/: package-lock.json  package.json  tsconfig.json
back/__tests__/: test-exemple-controller.js
back/src/: app.ts  main.js
back/src/server/: server.js  server.ts
backend/: index.php
client/: package-lock.json
client/public/: index.html
client/src/: App.js
client/src/components/: Layout.js
client/src/css/: layout.css  login.css
client/src/routes/: Home.js  Login.js
docs/: 404.html
docs/search/: search_index.json
front/pages/: _app.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
front/pages/api/: [auth].ts  login.ts
front/src/helpers/: store.ts  (+2 more)
src/: App.js
worker/: CMakeLists.txt
worker/include/: daemon_process.h  file_manager.h  file_structure.h
worker/src/: daemon_process.c  main.c
(+157 files in other folders)
